--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,3 +32,8 @@ _____________________________________________________
 6.  Refactor 'get_good_bios' to return the wikipedia summary for an artist.  If the wikipedia text is not available a notification is displayed.
 
 7.  Added google analytics script to all pages.
+_____________________________________________________
+
+6/4/2014
+
+1.  Created js function to resize images: function resize_image(url).
