update artist template grid layout, refactor css

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -47,4 +47,4 @@ _____________________________________________________
 
 1.  Complete biography toggle.
 
-
+2.  Update Artist template (grid layout).
