added top_hottt trim(), minimal css dev. added temporary debug funcs to views.py and artist.py.

--- a/dev/todo.txt
+++ b/dev/todo.txt
@@ -30,6 +30,7 @@ GENERAL
     4. Add local_settings.py to overwrite for dev.
     5. iri_to_uri
         https://docs.djangoproject.com/en/1.6/ref/unicode/#uri-and-iri-handling
+    6. add sort-by-genre list for / music/
 
 
 REDIS
